# tue_hsr

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: Arm.cfg
launch/: challenge_open.launch  move_base.launch  ros_to_rgbd.launch  standard_kinect.launch  world_model.launch
parameters/: base_local_planner.yaml  costmap_common.yaml  local_costmap_params.yaml  move_base.yaml  world_model.yaml
parameters/world_modeling/: world_model.yaml
scripts/: ForceDrive.py  WaitForDoorOpen.py  challenge_open  ed_get_entity  personal_business_card_dispenser.py  rips  rips.py  teleop.sh
src/tue_hsr/: __init__.py  robot_part.py  world_model_ed.py
